# graft

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  Cargo.toml  NOTICE  README.md  THIRD_PARTY_LICENSES  about.hbs  about.toml  dev  rust-toolchain.toml
.githooks/: pre-commit
crates/graft-audit/: Cargo.toml
crates/graft-avb/: Cargo.toml
crates/graft-erofs/: Cargo.toml
crates/graft-error/: Cargo.toml
crates/graft-error/src/: lib.rs
crates/graft-ext4/: Cargo.toml
crates/graft-image/: Cargo.toml
crates/graft-logging/: Cargo.toml
crates/graft-logging/src/: lib.rs
crates/graft-payload/: Cargo.toml
crates/graft-policy/: Cargo.toml
crates/graft-protocol/: Cargo.toml
crates/graft-sepolicy/: Cargo.toml
crates/graft-session/: Cargo.toml
crates/graft-state/: Cargo.toml
crates/graft-super/: Cargo.toml
crates/graft-support/: Cargo.toml
docs/: compatibility-floor.md  installer-transaction.md  repository-hygiene.md  runtime-failure-contract.md  support-grades.md  trusted-computing-base.md
modules/format/: Cargo.toml
modules/runtime/: Cargo.toml
modules/sdk/: Cargo.toml
patcher/desktop/: Cargo.toml
patcher/desktop/src/: main.rs
runtime/graft-sshd/: Cargo.toml
runtime/graftctl/: Cargo.toml
runtime/graftctl/src/: main.rs
runtime/graftd/: Cargo.toml
runtime/su/: Cargo.toml
