[workspace]
members = [
    "crates/*",
    "modules/*",
    "patcher/desktop",
    "runtime/*",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "deny"
warnings = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
